--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.9",
     "react": "^18.3.1",
